@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2014, 2019, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2014, 2022, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -32,7 +32,12 @@
  *          java.instrument
  *          jdk.jartool/sun.tools.jar
  * @run main RedefineClassHelper
- * @run main/othervm/timeout=180 -javaagent:redefineagent.jar -Xlog:redefine+class+iklass+add=trace,redefine+class+iklass+purge=trace,class+loader+data=debug,safepoint+cleanup,gc+phases=debug:rt.log RedefineRunningMethods
+ * @compile --enable-preview -source ${jdk.version} RedefineRunningMethods.java
+ * @run main/othervm/timeout=180
+ *         --enable-preview
+ *         -javaagent:redefineagent.jar
+ *         -Xlog:redefine+class+iklass+add=trace,redefine+class+iklass+purge=trace,class+loader+data=debug,safepoint+cleanup,gc+phases=debug:rt.log
+ *         RedefineRunningMethods
  */
 
 
@@ -59,56 +64,51 @@ class RedefineRunningMethods_B {
 
 public class RedefineRunningMethods {
 
-    public static String newB =
-                "class RedefineRunningMethods_B {" +
-                "   static int count1 = 0;" +
-                "   static int count2 = 0;" +
-                "   public static volatile boolean stop = false;" +
-                "  static void localSleep() { " +
-                "    try{ " +
-                "      Thread.currentThread().sleep(10);" +
-                "    } catch(InterruptedException ie) { " +
-                "    } " +
-                " } " +
-                "   public static void infinite() { " +
-                "       System.out.println(\"infinite called\");" +
-                "   }" +
-                "   public static void infinite_emcp() { " +
-                "       while (!stop) { count2++; localSleep(); }" +
-                "   }" +
-                "}";
+    public static String newB = """
+                class RedefineRunningMethods_B {
+                    static int count1 = 0;
+                    static int count2 = 0;
+                    public static volatile boolean stop = false;
+                    static void localSleep() {
+                        try {
+                            Thread.currentThread().sleep(10);
+                        } catch(InterruptedException ie) {
+                        }
+                    }
+                    public static void infinite() {
+                        System.out.println("infinite called");
+                    }
+                    public static void infinite_emcp() {
+                        while (!stop) { count2++; localSleep(); }
+                    }
+                }
+                """;
 
-    public static String evenNewerB =
-                "class RedefineRunningMethods_B {" +
-                "   static int count1 = 0;" +
-                "   static int count2 = 0;" +
-                "   public static volatile boolean stop = false;" +
-                "  static void localSleep() { " +
-                "    try{ " +
-                "      Thread.currentThread().sleep(1);" +
-                "    } catch(InterruptedException ie) { " +
-                "    } " +
-                " } " +
-                "   public static void infinite() { }" +
-                "   public static void infinite_emcp() { " +
-                "       System.out.println(\"infinite_emcp now obsolete called\");" +
-                "   }" +
-                "}";
+    public static String evenNewerB = """
+                class RedefineRunningMethods_B {
+                    static int count1 = 0;
+                    static int count2 = 0;
+                    public static volatile boolean stop = false;
+                    static void localSleep() {
+                        try {
+                            Thread.currentThread().sleep(1);
+                        } catch(InterruptedException ie) {
+                        }
+                    }
+                    public static void infinite() { }
+                    public static void infinite_emcp() {
+                        System.out.println("infinite_emcp now obsolete called");
+                    }
+                }
+                """;
 
 
     public static void main(String[] args) throws Exception {
 
-        new Thread() {
-            public void run() {
-                RedefineRunningMethods_B.infinite();
-            }
-        }.start();
-
-        new Thread() {
-            public void run() {
-                RedefineRunningMethods_B.infinite_emcp();
-            }
-        }.start();
+        var t1 = Thread.ofPlatform().start(RedefineRunningMethods_B::infinite);
+        var t1v = Thread.ofVirtual().start(RedefineRunningMethods_B::infinite);
+        var t2 = Thread.ofPlatform().start(RedefineRunningMethods_B::infinite_emcp);
+        var t2v = Thread.ofVirtual().start(RedefineRunningMethods_B::infinite);
 
         RedefineClassHelper.redefineClass(RedefineRunningMethods_B.class, newB);
 
@@ -117,11 +117,9 @@ public class RedefineRunningMethods {
         RedefineRunningMethods_B.infinite();
 
         // Start a thread with the second version of infinite_emcp running
-        new Thread() {
-            public void run() {
-                RedefineRunningMethods_B.infinite_emcp();
-            }
-        }.start();
+        var t3 = Thread.ofPlatform().start(RedefineRunningMethods_B::infinite_emcp);
+        var t3v = Thread.ofVirtual().start(RedefineRunningMethods_B::infinite_emcp);
+
 
         for (int i = 0; i < 20 ; i++) {
             String s = new String("some garbage");
@@ -147,5 +145,11 @@ public class RedefineRunningMethods {
             String s = new String("some garbage");
             System.gc();
         }
+        t1.join();
+        t2.join();
+        t3.join();
+        t1v.join();
+        t2v.join();
+
     }
 }
