@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 1997, 2016, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 1997, 2022, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -95,5 +95,5 @@ public class FinnishTest extends CollatorTest {
               tertiarySourceData, tertiaryTargetData, tertiaryResults);
     }
 
-    private final Collator myCollation = Collator.getInstance(new Locale("fi", "FI", ""));
+    private final Collator myCollation = Collator.getInstance(Locale.of("fi", "FI"));
 }
